# my-site

./: .dockerignore  .env.agent-bridge.example  .env.example  .env.test  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  README_RU.md  TODO.md  docker-compose.query-plans-stress.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  cli.py  main.py  pyproject.toml  start_application.sh
backend/config/: constants.py  initializers.py  loggers.py  settings.py
backend/core/: use_cases.py
backend/core/auth/: exceptions.py  storages.py  token_handlers.py  use_cases.py
backend/core/competency_matrix/: generators.py
backend/core/files/: file_storages.py  schemas.py  use_cases.py
backend/core/markdown/: services.py
backend/db/: meta.py  utils.py
backend/db/alembic/: alembic.ini
backend/db/models/: auth.py  blog.py  competency_matrix.py  contacts.py
backend/db/models/mixins/: publish.py
backend/db/storages/: auth.py  blog.py  competency_matrix.py  contacts.py  users.py
backend/entrypoints/litestar/: auth.py  guards.py  initializers.py  lifespan.py  template_callables.py
backend/entrypoints/litestar/api/: routers.py
backend/entrypoints/litestar/cli/: plugins.py
backend/entrypoints/litestar/middlewares/: logging.py
backend/entrypoints/litestar/views/: routers.py
backend/file_storages/: minio.py
backend/infra/config/: constants.py  initializers.py  loggers.py  settings.py
backend/infra/ioc/: container.py  registry.py
backend/infra/ioc/prodivers/: account_provider.py  auth_provider.py  files_provider.py  markdown_provider.py
backend/infra/minio/: file_storages.py
backend/infra/postgresql/: meta.py  utils.py
backend/infra/postgresql/alembic/: env.py
backend/infra/postgresql/models/: auth.py  base.py  blog.py  competency_matrix.py  contacts.py
backend/infra/postgresql/storages/: auth.py  blog.py  competency_matrix.py  contacts.py  users.py
backend/ioc/: container.py  registry.py
backend/ioc/prodivers/: account_provider.py  auth_provider.py  blog_provider.py  competency_matrix_provider.py  contacts_provider.py  database_provider.py  files_provider.py  general_provider.py
backend/performance/: README.md  __init__.py  contracts.py  http.py  locustfile.py  run_locust.sh  scenario.py
backend/performance/locust/: __init__.py  constants.py  contracts.py  http.py  locustfile.py  scenario.py  seed.py  settings.py  thresholds.py
backend/performance/query_plans/: __init__.py  __main__.py  analysis.py  baseline.py  capture.py  cli.py  discovery.py  expectations.py  models.py  realistic-baseline.json  reports.py  runner.py  runtime_capture.py  scenarios.py  seed.py  sql.py
backend/scripts/: alembic.sh  app.sh  async_typer.py  build_query_plan_baseline.sh  common.sh  install.sh  main.py  pytest_databases.py  pytest_parallel.py  quality.sh  run_locust.sh  run_query_plans.sh  security.sh  test.sh
backend/scripts/commands/: admin.py
backend/services/: markdown.py
backend/src/: agent_bridge.py  asgi.py  cli.py  main.py  manage.py  urls.py  wsgi.py
backend/src/api/: app.py  deps.py  schemas.py
backend/src/api/competency_matrix/: deps.py  endpoints.py  schemas.py
backend/src/config/: constants.py  initializers.py  settings.py
backend/src/core/: AGENTS.md  enums.py  exceptions.py  generators.py  schemas.py  use_cases.py
backend/src/core/account/: enums.py  exceptions.py  schemas.py  storages.py  use_cases.py
backend/src/core/agent_access/: clients.py  enums.py  exceptions.py  schemas.py  storages.py  use_cases.py
backend/src/core/articles/: __init__.py  enums.py  event_dispatchers.py  exceptions.py  schemas.py  storages.py  use_cases.py
backend/src/core/auth/: enums.py  event_dispatchers.py  exceptions.py  generators.py  password_hashers.py  schemas.py  storages.py  token_handlers.py  types.py  use_cases.py
backend/src/core/blog/: use_cases.py
backend/src/core/cache_tools/: clients.py  enums.py  event_dispatchers.py  exceptions.py  schemas.py  storages.py  use_cases.py
backend/src/core/competency_matrix/: enums.py  exceptions.py  parsers.py  readers.py  schemas.py  services.py  storages.py  use_cases.py
backend/src/core/contacts/: schemas.py  use_cases.py
backend/src/core/files/: clients.py  enums.py  exceptions.py  file_name_generators.py  file_storages.py  markdown.py  processors.py  schemas.py  services.py  storages.py  types.py  use_cases.py
backend/src/core/i18n/: enums.py
backend/src/core/notes/: __init__.py  enums.py  event_dispatchers.py  exceptions.py  schemas.py  storages.py  use_cases.py
backend/src/core/resumes/: enums.py  exceptions.py  exporters.py  schemas.py  storages.py  use_cases.py
backend/src/core/users/: exceptions.py  schemas.py
backend/src/core/wiki_links/: enums.py  schemas.py  use_cases.py
backend/src/db/: models.py  storages.py  utils.py
backend/src/db/alembic/: env.py
backend/src/infra/: admin.py  apps.py  forms.py  healthcheck.py  post_commit_actions.py  urls.py  views.py
backend/src/ioc/: container.py  registry.py
backend/src/services/: markdown.py
backend/src/settings/: auto.py  base.py  config.py  sub_anydi.py  sub_cors.py  sub_storages.py  sub_unfold.py
backend/tests/: AGENTS.md  client.py  conftest.py  fixtures.py  test_cases.py
backend/tests/api_tests/: test_healthcheck.py
backend/tests/auth_tests/: test_backends.py
backend/tests/config_tests/: test_settings.py
backend/tests/db_tests/: test_auth_storage.py  test_competency_matrix_storage.py
backend/tests/helpers/: api.py  app.py  assertions.py  collections.py  factory.py  storage.py
backend/tests/integration/: conftest.py
backend/tests/migrations/: conftest.py  test_0001.py  test_0002.py  test_0003.py  test_0005.py  test_0006.py  test_0007.py  test_0008.py  test_0009.py  test_0010.py  test_0011.py  test_0012.py  test_0013.py
backend/tests/mocks/: auth_backends.py
backend/tests/unit/: conftest.py  fixtures.py  test_start_application_script.py
(+1474 files in other folders)
